    - debian/copyright: update.
    - debian/rules, debian/rules.d/*: replace eglibc by glibc.
    - source/lintian-overrides: replace eglibc by glibc.
    - debian/sysdeps/*: replace eglibc by glibc.
    - debian/po/*: update using debconf-updatepo.
    - debian/rules.d/tarball.mk: rewrite to generate the orig tarball and
      to fetch the branch updates through git.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 May 2014 12:38:51 +0200

eglibc (2.19-0experimental1) UNRELEASED; urgency=medium

  [ Adam Conrad ]
  * New upstream release: version 2.19, orig tarball built at SVN r25252:
    - debian/patches/alpha/local-string-functions.diff: Rebased.
    - debian/patches/any/local-disable-test-tgmath2.diff: Rebased.
    - debian/patches/any/local-localedef-fix-trampoline.diff: Rebased.
    - debian/patches/any/local-no-malloc-backtrace.diff: Rebased.
    - debian/patches/any/submitted-longdouble.diff: Rebased.
    - debian/patches/hurd-i386/local-enable-ldconfig.diff: Rebased.
    - debian/patches/kfreebsd/local-fbtl-depends.diff: Rebased.
    - debian/patches/kfreebsd/local-scripts.diff: Rebased.
    - debian/patches/locale/preprocessor-collate-uli-sucks.diff: Rebased.
    - debian/patches/localedata/fix-lang.diff: Rebased.
    - debian/patches/localedata/locale-en_DK.diff: Rebased.
    - debian/patches/localedata/locale-hsb_DE.diff: Rebased.
    - debian/patches/localedata/locale-ku_TR.diff: Rebased.
    - debian/patches/localedata/locales-fr.diff: Rebased.
    - debian/patches/localedata/sort-UTF8-first.diff: Rebased.
    - debian/patches/powerpc/local-math-logb.diff: Rebased.
    - debian/patches/sparc/local-fork.diff: Rebased.
    - debian/patches/sparc/local-sparcv9-target.diff: Rebased.
    - debian/patches/i386/local-i586-ulps.diff: Regenerate.
    - debian/patches/alpha/submitted-PTR_MANGLE.diff: Fixed upstream.
    - debian/patches/ia64/submitted-fpu-ulps.diff: Regenerated upstream.
    - debian/patches/powerpc/submitted-gettimeofday-vdso.diff: Dropped.