@@ -15,6 +15,7 @@ glibc (2.19-0experimental2) UNRELEASED; urgency=medium
     - debian/po/*: update using debconf-updatepo.
     - debian/rules.d/tarball.mk: rewrite to generate the orig tarball and
       to fetch the branch updates through git.
+    - patches/any/submitted-nl_langinfo-static.diff: refresh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 May 2014 12:38:51 +0200
 
